public/sources/less/states/common.less
// VC-Icons
@import "../../fonts/VC-Icons/style.less";
// VC Attribute icons
@import "../../fonts/vcAttributeIcons/style.less";
// Add helpers
@import "../helpers/layoutHelper/init.less";
@import "../helpers/blankPageHelper/init.less";
@import "../helpers/blankRowPlaceholder/init.less";
@import "../helpers/pageEditable/init.less";
@import "../helpers/rowPlaceholder/init.less";
@import "../helpers/columnResizer/init.less";
@import "../helpers/blankElement/init.less";
@import "../helpers/layoutZonesHelper/init.less";
@import "../helpers/migrationNotice/init.less";
@import "../primitives/text/init.less";
@import "../helpers/inlineEditor/init.less";
@import "../helpers/permalink/init.less";

.vcv-is-no-selection {
  user-select: none;
}

.vcv-is-invisible {
  visibility: hidden;
}

vcvhelper {
  display: block;
  border: none;
}

.vcvhelper {
  border: none;
}

.vcv-is-disabled-outline {
  &,
  a,
  area,
  button,
  input,
  label,
  select,
  summary,
  textarea,
  [tabindex] {
    &:focus {
      outline: none;
    }
  }
  a:focus {
    box-shadow: none;
    border: none;
  }
}

[data-vcv-transition-disabled="true"] {
  transition: none!important;
}

// opacity fix for gtags and other scripts
html.vcwb-editor-html.vcwb-editor--opacity, html.async-hide {
  opacity: 1 !important;
}
body.vcwb-editor-body.vcwb-editor--opacity {
  opacity: 1 !important;
}

// Control styling for editor page title
.vcv-title-control {
  display: none;
  position: absolute;
  top: -30px;
  left: 15px;
  width: 32px;
  height: 32px;
  background-color: #6dab3c;
  color: white;
  border-radius: 5px;
  font-size: 13px;
  cursor: pointer;

  &--active {
    display: block;
  }

  &:hover {
    background-color: #5c9133;
  }

  i {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    &::before {
      font-size: 1.25em;
    }
  }
}

